--- a/Exercise_02/app/src/main/res/layout/activity_right.xml
+++ b/Exercise_02/app/src/main/res/layout/activity_right.xml
@@ -73,4 +73,14 @@
             android:textSize="20sp" />
     </LinearLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/baseline_format_color_fill_24" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
